# cram_robohow_review_year3

./: CMakeLists.txt  README.md  cram-robohow-review-year3.asd  package.xml
asdf/: cram-robohow-review-year3.asd
cram_boxy_process_module/: CMakeLists.txt  package.xml
cram_boxy_process_module/src/: cart-controllers.lisp  controller-manager.lisp  cram-boxy-process-module.asd  package.lisp  pos-controllers.lisp  process-module.lisp  vel-mux.lisp
cram_rhy3_pickandplace_demo/: CMakeLists.txt  README.md  cram-rhy3-pickandplace-demo.asd  package.xml
cram_rhy3_pickandplace_demo/doc/: kqml_demo.txt
cram_rhy3_pickandplace_demo/scripts/demo-control-panel/: dcp.py
cram_rhy3_pickandplace_demo/src/: costmap-metadata.lisp  demo-plans.lisp  facts.lisp  package.lisp  sem-map-config.lisp  utils.lisp
cram_rhy3_rolling_demo/: CMakeLists.txt  package.xml
cram_rhy3_rolling_demo/src/: cram-rolling-demo.asd  demo-handle.lisp  package.lisp  plans.lisp  process-module.lisp
cram_robohow_review_year3/: CMakeLists.txt  package.xml
robosherlock_mini_process_module/: CMakeLists.txt  EXAMPLE  mainpage.dox  package.xml  robosherlock-mini-process-module.asd
robosherlock_mini_process_module/src/: package.lisp  process-module.lisp
scripts/demo-control-panel/: dcp.py
scripts/demo-control-panel/ui/: ui.glade
src/: costmap-metadata.lisp  demo-plans.lisp  facts.lisp  package.lisp  utils.lisp
